- updated js code (accessed after pseudo element) - added view on hover - updated gallery images to wrap in items - minor fix on others

--- a/src/tailwind.scss
+++ b/src/tailwind.scss
@@ -46,41 +46,41 @@
     @apply h-full w-full flex flex-col justify-center items-center gap-2 bg-black bg-opacity-40 text-white sm:rounded-lg md:px-2;
 }
 .product-preview .row .column.info h5 {
-    @apply font-bold text-4xl text-center uppercase tracking-wide;
+    @apply font-broad font-bold text-3xl text-center uppercase tracking-wide md:text-4xl;
 }
 .product-preview .row .column.info p {
-    @apply px-8 text-base text-center;
+    @apply font-compact px-8 text-lg text-center tracking-wide md:text-xl;
 }
 .product-preview .row .column.info a {
-    @apply inline-block mt-4 px-6 py-[13px] rounded-xl font-semibold text-xl text-black bg-white transition-colors duration-300 hover:bg-primary-green hover:text-white;
+    @apply inline-block mt-4 px-6 py-[13px] rounded-xl bg-white font-broad font-bold text-gray-900 uppercase transition-colors duration-300 tracking-wider hover:bg-secondary-dark hover:text-white md:text-lg;
 }
 .product-preview .row:nth-child(even) .column.info {
     @apply md:order-last;
 }
 /* product list */
 .product-list-all .row {
-    @apply flex flex-wrap justify-center md:mb-6;
+    @apply flex flex-wrap md:mb-6;
 }
 .product-list-all .subrow {
-    @apply flex flex-wrap justify-center;
+    @apply flex flex-wrap;
 }
 .product-list-all .products > div:first-of-type .column {
-    @apply w-full md:w-1/3;
+    @apply w-full sm:w-1/2 md:w-1/3;
 }
 .product-list-all .products > div:last-of-type > .column {
     @apply w-full;
 }
 .product-list-all .products > div:last-of-type .subrow .column {
-    @apply w-full md:w-1/3;
+    @apply w-full sm:w-1/2 md:w-1/3;
 }
 .product-list-all .row h5 {
-    @apply mt-4 mb-2 text-2xl text-primary-green font-semibold tracking-wide uppercase;
+    @apply mt-4 mb-2 text-xl text-primary-green font-broad font-semibold tracking-wide uppercase md:text-2xl;
 }
 .product-list-all .row h6 {
-    @apply mb-2 text-lg text-primary-green font-medium tracking-wide uppercase;
+    @apply my-2 text-primary-green font-broad font-medium tracking-wide uppercase md:mt-0 md:text-lg;
 }
 .product-list-all li {
-    @apply my-1 text-lg text-white;
+    @apply my-1 text-white font-broad md:text-lg;
 }
 
 /* Product Category Page */
@@ -117,16 +117,25 @@
     @apply px-4 xl:px-0;
 }
 .category-content .product-gallery {
-    @apply hidden md:block md:py-6;
+    @apply pt-3 pb-6 sm:py-6;
 }
 .category-content .product-gallery > h6 {
     @apply mb-2 text-2xl font-compact font-medium tracking-wide uppercase lg:text-3xl;
 }
 .category-content .product-gallery .gallery-container {
-    @apply grid gap-4 md:grid-cols-3 lg:grid-cols-4;
+    @apply grid gap-4 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4;
+}
+.category-content .product-gallery .gallery-container .gallery-item {
+    @apply relative cursor-pointer;   
+}
+.category-content .product-gallery .gallery-container .gallery-item::after {
+    @apply absolute hidden justify-center items-center top-0 left-0 h-full w-full bg-black bg-opacity-75 rounded-md text-white content-['\f00e'] font-['Font_Awesome_5_Free'] font-black text-7xl;
+}
+.category-content .product-gallery .gallery-container .gallery-item:hover::after {
+    @apply flex;
 }
 .category-content .product-gallery .gallery-container img {
-    @apply bg-gray-600 rounded-md;
+    @apply h-full bg-gray-600 rounded-md object-cover object-center;
 }
 .product-list {
     @apply w-full relative;
@@ -164,7 +173,7 @@
 }
 /* header navigation */
 .product-nav .nav-item {
-    @apply relative p-2 w-full min-w-[300px] snap-start snap-always sm:w-1/2 md:min-w-0 md:w-1/3 lg:w-1/4 xl:w-1/5 xl:max-w-xs;
+    @apply relative p-2 w-full min-w-[300px] snap-center snap-always sm:snap-start sm:w-1/2 md:min-w-0 md:w-1/3 lg:w-1/4 xl:w-1/5 xl:max-w-xs;
 }
 .product-nav .nav-item .nav-link {
     @apply block w-full h-full rounded-lg border border-gray-200 shadow-md;
